--- a/src/existant.tex
+++ b/src/existant.tex
@@ -6,10 +6,15 @@ Les réseaux de Petri (citer thèse C.A. Petri) sont au cœur du formalisme util
 \subsection{Familles de réseaux de Petri}
 % http://sfa.univ-poitiers.fr/informatique-telecom/lib/exe/fetch.php?media=quotidien:m2:ue:spec_temps_reel:extension_rdp_10.pdf
 \subsubsection{Base}
+État des lieux assez général : \cite{david2010discrete}
 \subsubsection{Réseaux hiérarchiques}
+Réseaux hiérarchiques par blocs:  \cite{fehling1993concept}.
 \subsubsection{Réseaux colorés}
+Ouvrage de référence : \cite{jensen1987coloured}
+Hierarchies in coloured petri nets : \cite{rozenberg1991advances}
 \subsubsection{Réseaux temporels}
-\subsubsection{Arcs inhibiteurs}
+Article d'origine : \cite{suzuki1989temporal}
+Abstraction au dessus des réseaux temporels : \cite{klai2013temporal} (encode tps écoulé min/max à chaque instant)
 \subsubsection{Réseaux stochastiques}
 Stochastic Petri Nets, GSPN
 \subsubsection{Réseaux flous}
