--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -36,3 +36,65 @@
 	date = {submitted}
 }
 
+@book{david2010discrete,
+  title={Discrete, continuous, and hybrid Petri nets},
+  author={David, Ren{\'e} and Alla, Hassane},
+  year={2010},
+  publisher={Springer}
+}
+
+@incollection{fehling1993concept,
+  title={A concept of hierarchical Petri nets with building blocks},
+  author={Fehling, Rainer},
+  booktitle={Advances in Petri Nets 1993},
+  pages={148--168},
+  year={1993},
+  publisher={Springer}
+}
+
+@book{jensen1987coloured,
+  title={Coloured petri nets},
+  author={Jensen, Kurt},
+  year={1987},
+  publisher={Springer}
+}
+
+@incollection{rozenberg1991advances
+year={1991},
+isbn={978-3-540-53863-9},
+booktitle={Advances in Petri Nets 1990},
+volume={483},
+series={Lecture Notes in Computer Science},
+editor={Rozenberg, Grzegorz},
+doi={10.1007/3-540-53863-1_30},
+title={Hierarchies in coloured petri nets},
+url={http://dx.doi.org/10.1007/3-540-53863-1_30},
+publisher={Springer Berlin Heidelberg},
+keywords={high-level nets; Coloured Petri Nets; structuring mechanisms; hierarchies; re-usable components; subnets},
+author={Huber, Peter and Jensen, Kurt and Shapiro, RobertM.},
+pages={313-341}
+}
+
+@ARTICLE{suzuki1989temporal, 
+author={Suzuki, I. and Lu, H.}, 
+journal={Computers, IEEE Transactions on}, 
+title={Temporal Petri nets and their application to modeling and analysis of a handshake daisy chain arbiter}, 
+year={1989}, 
+month={May}, 
+volume={38}, 
+number={5}, 
+pages={696-704}, 
+keywords={Petri nets;formal logic;Temporal Petri nets;analysis;causal relationships;eventuality;fairness;handshake daisy chain arbiter;modeling;temporal assertions;temporal logic operations;temporal relationships;timing constraints;Computer simulation;Concurrent computing;Delay effects;Fires;Logic;Lungs;Performance analysis;Petri nets;Power system modeling;Timing}, 
+doi={10.1109/12.24271}, 
+ISSN={0018-9340},}
+
+@INPROCEEDINGS{klai2013temporal, 
+author={Klai, K. and Aber, N. and Petrucci, L.}, 
+booktitle={Temporal Representation and Reasoning (TIME), 2013 20th International Symposium on}, 
+title={A New Approach to Abstract Reachability State Space of Time Petri Nets}, 
+year={2013}, 
+month={Sept}, 
+pages={117-124}, 
+keywords={Petri nets;formal specification;reachability analysis;real-time systems;TAG;TPN model;abstract reachability state space;abstract representation;event-based properties;real-time systems;state-based properties;time Petri nets;timed aggregate graph;Abstracts;Aggregates;Cognition;Delays;Manganese;Petri nets;Semantics;Model Checking of Timed Properties;Real Time Systems;State Space Abstraction;Time Petri Nets}, 
+doi={10.1109/TIME.2013.22}, 
+ISSN={1530-1311},}
