--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -59,20 +59,20 @@
   publisher={Springer}
 }
 
-@incollection{rozenberg1991advances
-year={1991},
-isbn={978-3-540-53863-9},
-booktitle={Advances in Petri Nets 1990},
-volume={483},
-series={Lecture Notes in Computer Science},
-editor={Rozenberg, Grzegorz},
-doi={10.1007/3-540-53863-1_30},
-title={Hierarchies in coloured petri nets},
-url={http://dx.doi.org/10.1007/3-540-53863-1_30},
-publisher={Springer Berlin Heidelberg},
-keywords={high-level nets; Coloured Petri Nets; structuring mechanisms; hierarchies; re-usable components; subnets},
-author={Huber, Peter and Jensen, Kurt and Shapiro, RobertM.},
-pages={313-341}
+@incollection{rozenberg1991advances,
+	year={1991},
+	isbn={978-3-540-53863-9},
+	booktitle={Advances in Petri Nets 1990},
+	volume={483},
+	series={Lecture Notes in Computer Science},
+	editor={Rozenberg, Grzegorz},
+	doi={10.1007/3-540-53863-1_30},
+	title={Hierarchies in coloured petri nets},
+	url={http://dx.doi.org/10.1007/3-540-53863-1_30},
+	publisher={Springer Berlin Heidelberg},
+	keywords={high-level nets; Coloured Petri Nets; structuring mechanisms; hierarchies; re-usable components; subnets},
+	author={Huber, Peter and Jensen, Kurt and Shapiro, RobertM.},
+	pages={313-341}
 }
 
 @ARTICLE{suzuki1989temporal, 
@@ -98,3 +98,158 @@ pages={117-124},
 keywords={Petri nets;formal specification;reachability analysis;real-time systems;TAG;TPN model;abstract reachability state space;abstract representation;event-based properties;real-time systems;state-based properties;time Petri nets;timed aggregate graph;Abstracts;Aggregates;Cognition;Delays;Manganese;Petri nets;Semantics;Model Checking of Timed Properties;Real Time Systems;State Space Abstraction;Time Petri Nets}, 
 doi={10.1109/TIME.2013.22}, 
 ISSN={1530-1311},}
+
+@article{hillah2010standardisation,
+	title={Standardisation des r{\'e}seaux de petri: etat de l'art et enjeux futurs},
+	author={Hillah, Lom-Messan and Petrucci, Laure},
+	journal={Genie Logiciel},
+	volume={93},
+	pages={5--10},
+	year={2010}
+}
+
+@incollection{colom2013application,
+	year={2013},
+	isbn={978-3-642-38696-1},
+	booktitle={Application and Theory of Petri Nets and Concurrency},
+	volume={7927},
+	series={Lecture Notes in Computer Science},
+	editor={Colom, José-Manuel and Desel, Jörg},
+	doi={10.1007/978-3-642-38697-8_19},
+	title={Unifying the Semantics of Modular Extensions of Petri Nets},
+	url={http://dx.doi.org/10.1007/978-3-642-38697-8_19},
+	publisher={Springer Berlin Heidelberg},
+	author={Marechal, Alexis and Buchs, Didier},
+	pages={349-368}
+}
+
+@techreport{marechal2012modular,
+	title={Modular extensions of Petri Nets: a generic template metamodel},
+	author={Marechal, Alexis and Buchs, Didier},
+	year={2012},
+	institution={Tech. Rep. 220, University of Geneva}
+}
+
+@article{petri1962kommunikation,
+	title={Kommunikation mit automaten},
+	author={Petri, Carl Adam},
+	year={1962}
+}
+
+@techreport{zervos1977colored,
+	title={Colored Petri Nets: Their Properties and Applications.},
+	author={Zervos, Cristian Radu and Irani, Keki B},
+	year={1977},
+	institution={DTIC Document}
+}
+
+@article{logic2002temporal,
+	title={Temporal logic},
+	author={Logic, Temporal},
+	journal={Stanford Encyclopedia of Philosophy},
+	year={2002}
+}
+
+@book{bause1996stochastic,
+	title={Stochastic Petri Nets},
+	author={Bause, Falko and Kritzinger, Pieter S},
+	year={1996},
+	publisher={Springer}
+}
+
+@article{wang2014dynamic,
+	title={Dynamic representation of fuzzy knowledge based on fuzzy petri net and genetic-particle swarm optimization},
+	author={Wang, Wei-Ming and Peng, Xun and Zhu, Guo-Niu and Hu, Jie and Peng, Ying-Hong},
+	journal={Expert Systems with Applications},
+	volume={41},
+	number={4},
+	pages={1369--1376},
+	year={2014},
+	publisher={Elsevier}
+}
+
+@ARTICLE{pedrycz1994generalized, 
+	author={Pedrycz, W. and Gomide, F.}, 
+	journal={Fuzzy Systems, IEEE Transactions on}, 
+	title={A generalized fuzzy Petri net model}, 
+	year={1994}, 
+	month={Nov}, 
+	volume={2}, 
+	number={4}, 
+	pages={295-301}, 
+	keywords={Petri nets;fuzzy set theory;learning (artificial intelligence);AND-type neurons;DOMINANCE neurons;OR-type neurons;generalized fuzzy Petri net model;learning capabilities;neural-type modeling;Computational intelligence;Computational modeling;Fuzzy logic;Fuzzy neural networks;Fuzzy sets;Fuzzy systems;Intelligent systems;Neurons;Petri nets;Visualization}, 
+	doi={10.1109/91.324809}, 
+	ISSN={1063-6706},}
+
+@article{alhroob2014transforming,
+	title={Transforming UML State Machine Diagram to High Level Petri Net Using Genetic Algorithm},
+	author={Alhroob, Aysh and Yousef, Nidal},
+	journal={Lecture Notes on Software Engineering},
+	volume={2},
+	number={3},
+	year={2014}
+}
+
+@book{jensen1983high,
+	title={High-level Petri nets},
+	author={Jensen, Kurt},
+	year={1983},
+	publisher={Springer}
+}
+
+@article{kindler2013simulator,
+	title={A simulator for high-level Petri nets: An ePNK application},
+	author={Kindler, Ekkart and Laganeckas, Mindaugas},
+	journal={Petri Net Newsletter},
+	volume={82},
+	year={2013}
+}
+@article{lohmann2009petri,
+	title={The Petri Net API},
+	author={Lohmann, Niels and Mennicke, Stephan and Sura, Christian},
+	year={2009}
+}
+
+@article{jensen2007coloured,
+	title={Coloured Petri Nets and CPN Tools for modelling and validation of concurrent systems},
+	author={Jensen, Kurt and Kristensen, Lars Michael and Wells, Lisa},
+	journal={International Journal on Software Tools for Technology Transfer},
+	volume={9},
+	number={3-4},
+	pages={213--254},
+	year={2007},
+	publisher={Springer}
+}
+
+@article{pross2014object,
+	title={An object-oriented Petri net simulation tool for hybrid biological processes},
+	author={Pross, Sabrina and Bachmann, Bernhard},
+	year={2014}
+}
+
+@incollection{heiner2012snoopy
+	year={2012},
+	isbn={978-3-642-31130-7},
+	booktitle={Application and Theory of Petri Nets},
+	volume={7347},
+	series={Lecture Notes in Computer Science},
+	editor={Haddad, Serge and Pomello, Lucia},
+	doi={10.1007/978-3-642-31131-4_22},
+	title={Snoopy – A Unifying Petri Net Tool},
+	url={http://dx.doi.org/10.1007/978-3-642-31131-4_22},
+	publisher={Springer Berlin Heidelberg},
+	keywords={hierarchical (coloured) qualitative/stochastic/continuous/ hybrid Petri nets; modelling; animation; simulation},
+	author={Heiner, Monika and Herajy, Mostafa and Liu, Fei and Rohr, Christian and Schwarick, Martin},
+	pages={398-407}
+}
+
+@article{rohr2010snoopy,
+	title={Snoopy—a unifying Petri net framework to investigate biomolecular networks},
+	author={Rohr, Christian and Marwan, Wolfgang and Heiner, Monika},
+	journal={Bioinformatics},
+	volume={26},
+	number={7},
+	pages={974--975},
+	year={2010},
+	publisher={Oxford Univ Press}
+}
