--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -253,3 +253,10 @@ ISSN={1530-1311},}
 	year={2010},
 	publisher={Oxford Univ Press}
 }
+
+@book{diaz2013petri,
+	title={Petri nets: fundamental models, verification and applications},
+	author={Diaz, Michel},
+	year={2013},
+	publisher={John Wiley \& Sons}
+}
