--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -14,3 +14,8 @@
 	name=Modelica, 
 	description={un langage de programmation orienté objet basé sur des équations servant à modéliser des systèmes physiques}
 }
+\newglossaryentry{cyberphysique}
+{
+	name=cyber-physique, 
+	description={la science des systèmes informatiques (souvent répartis) contrôlant des systèmes physiques et électro-techniques}
+}
