--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -260,3 +260,32 @@ ISSN={1530-1311},}
 	year={2013},
 	publisher={John Wiley \& Sons}
 }
+
+@incollection{campos2014elementary,
+	title={Elementary Events for Modeling of Human-System Interactions with Petri Net Models},
+	author={Campos-Rebelo, Rog{\'e}rio and Costa, Anik{\'o} and Gomes, Lu{\'\i}s},
+	booktitle={Technological Innovation for Collective Awareness Systems},
+	pages={219--226},
+	year={2014},
+	publisher={Springer}
+}
+
+@article{chen2014research,
+	title={Research on Parallel Test Task Scheduling Based on Improved Genetic Algorithm and Petri Net},
+	author={Chen, Pei Pei and Qiu, Bao Mei and Ba, Hao},
+	journal={Applied Mechanics and Materials},
+	volume={543},
+	pages={1119--1122},
+	year={2014},
+	publisher={Trans Tech Publ}
+}
+
+@article{zhang2014modeling,
+	title={Modeling and Analysis for CPS Physical Entities Based on Spatio-Temporal Petri Net.},
+	author={Zhang, Guangquan and Zhang, Mingtai and Yan, Rongjie and Chen, Mingcai and Xu, Chengkai and Li, Yejing},
+	journal={Journal of Computers},
+	volume={9},
+	number={2},
+	year={2014}
+}
+
