--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -19,3 +19,27 @@
 	name=cyber-physique, 
 	description={la science des systèmes informatiques (souvent répartis) contrôlant des systèmes physiques et électro-techniques}
 }
+
+\newglossaryentry{calculambiant}
+{
+	name={calcul ambient}, 
+	description={une \gls{algebreproc} orientée vers les périphériques mobiles et les réseaux à topologie dynamique}
+}
+
+\newglossaryentry{picalcul}
+{
+	name={$\pi$-calcul},
+	description={un langage de programmation de conception proche du $\lambda$-calcul, servant à modéliser des systèmes répartis. C'est une \gls{algebreproc}}	
+}
+
+\newglossaryentry{joincalcul}
+{
+	name={join-calcul}, 
+	description={un cas particulier du \gls{picalcul}, qui a été implémenté dans divers langages comme le \brand{Caml} ou le \brand{C++}}
+}
+
+\newglossaryentry{algebreproc}
+{
+	name={algèbre de processus},
+	description={un ensemble de méthodes formalisées permettant de modéliser des systèmes répartis et concurrents}
+}
