--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -24,7 +24,7 @@
 
 @book{lynch1996distributed,
   title={Distributed algorithms},
-  author={Lynch, Nancy A},
+  author="Lynch, Nancy A",
   year={1996},
   publisher={Morgan Kaufmann}
 }
@@ -227,7 +227,7 @@ ISSN={1530-1311},}
 	year={2014}
 }
 
-@incollection{heiner2012snoopy
+@incollection{heiner2012snoopy,
 	year={2012},
 	isbn={978-3-642-31130-7},
 	booktitle={Application and Theory of Petri Nets},
@@ -289,3 +289,36 @@ ISSN={1530-1311},}
 	year={2014}
 }
 
+@article{koch2014petri,
+	title={Petri Nets in the Biosciences},
+	author={Koch, Ina and Reisig, Wolfgang and Schreiber, Falk},
+	journal={it--Information Technology},
+	volume={56},
+	number={2},
+	pages={43--45},
+	year={2014}
+}
+
+@book{attiya2004distributed,
+	title={Distributed computing: fundamentals, simulations, and advanced topics},
+	author={Attiya, Hagit and Welch, Jennifer},
+	volume={19},
+	year={2004},
+	publisher={John Wiley \& Sons}
+}
+
+@book{varela2013programming,
+	title={Programming Distributed Computing Systems: A Foundational Approach},
+	author={Varela, Carlos A},
+	year={2013},
+	publisher={The MIT Press}
+}
+
+@article{yildirim2012data,
+	title={Data-Aware Distributed Computing},
+	author={Yildirim, Esma and Balman, Mehmet and Kosar, Tevfik},
+	journal={Data Intensive Distributed Computing: Challenges and Solutions for Large-scale Information Management},
+	pages={1},
+	year={2012},
+	publisher={IGI Global Snippet}
+}
